Action bar correction

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="citas">Citas</string>
     <string name="historial">Historial</string>
     <string name="ayuda">Ayuda</string>
+    <string name="option">Opciones</string>
 </resources>
